# AICamera-Style-Transfer

./: CONTRIBUTING.md  README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: mondrian_init.pb
app/src/main/assets/animals/: init_net.pb
app/src/main/assets/flowers/: init_net.pb
app/src/main/assets/lines/: init_net.pb
app/src/main/assets/page/: init_net.pb
app/src/main/assets/style_transfer/composition/: init_net.pb
app/src/main/assets/style_transfer/femme/: init_net.pb
app/src/main/assets/style_transfer/mosaic/: init_net.pb
app/src/main/assets/style_transfer/night_b/: init_net.pb
app/src/main/assets/style_transfer/watercolor/: init_net.pb
app/src/main/assets/whale_c/: init_net.pb
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/caffe2/mobile/contrib/opengl/: CMakeLists.txt
app/src/main/cpp/caffe2/mobile/contrib/opengl/core/: GLFilter.cc
app/src/main/cpp/caffe2/mobile/contrib/opengl/test/: opengl_test.cc
app/src/main/java/facebook/styletransfer/: StyleTransfer.java
app/src/main/res/layout/: activity_styletransfer.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
